syntax = "proto3";
package api;


service Api {
  rpc GetHealth(GetHealthRequest) returns (GetHealthResponse) {}
}

message GetHealthRequest {
}

enum HealthStatus {
  UNHEALTHY = 0;
  OK = 1;
}

message GetHealthResponse {
  HealthStatus status = 1;
  // NEXT =  2
}

